<resources>
    <string name="app_name">RotexHand</string>
    <string name="no_device">No Bluetooth!</string>
    <string name="wumignhzi">— 无名指 —</string>
    <string name="wumingzhishuoming">重复摆动无名指动作，直至提示成功</string>
    <string name="woquanshuoming">重复握拳动作，直至提示成功</string>
    <string name="woquan">— 握拳 —</string>
    <string name="footer_button_close">关闭</string>
    <string name="connecting_ble">正在连接蓝牙...</string>
    <string name="connect_eee">连接</string>
    <string name="ble_not_supported">手机不支持蓝牙4.0</string>

    <string name="ecg_knowledge">心电胸贴</string>
    <string name="disease_management">病情管理</string>
    <string name="consulting_expert">咨询专家</string>
    <string name="my_tv_my">我的</string>
    <string name="my_update">检查更新</string>
    <string name="my_about">关于我们</string>
    <string name="my_select_language">语言选择</string>
    <string name="device_select">选择设备</string>
    <string name="home_text">首页</string>
    <string name="waiting_data">正在等待传感器传输数据...</string>
    <string name="ecg_nubra_text">心电胸贴</string>
    <string name="ecg_nubra_start_measure">开始测量</string>
    <string name="ecg_nubra_stop_measure">停止测量</string>
    <string name="bpm">bpm/心率</string>
    <string name="pressure_index">压力指数</string>
    <string name="cardiac_functional_age">心脏功能年龄</string>
    <string name="record_data">记录数据</string>
    <string name="Consulting_expert">咨询专家</string>
    <string name="not_write_file">不能写文件</string>
    <string name="no_sdcard">没有SD卡</string>
    <string name="scanble_serch">搜索</string>
    <string name="heart_rate">心率</string>
    <string name="Real_time_heart_rate">实时心率</string>
    <string name="Maximum_value">最高值</string>
    <string name="Minmum_value">最低值</string>
    <string name="Average_value">平均值</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="fatigue_degree">疲劳度</string>
    <string name="play_back">心电图回放</string>
    <string name="start_paly_back">开始回放</string>
    <string name="stop_paly_back">停止回放</string>
    <string name="filename">文件名：</string>
    <string name="rotex_electrocardiogram">心电图</string>
    <string name="rotex_ecgshow_string1">正在测心率，请停止后再退出</string>
    <string name="rotex_ecgshow_string2">测量时间不够，请重新测量</string>
    <string name="rotex_ecgshow_string3">等待蓝牙连接成功</string>
    <string name="roitex_ecgshow_string4">"数据不对。请你重新测试! "</string>
    <string name="rotex_ecgshow_teenagers">青少年</string>
    <string name="rotex_ecgshow_Youth">青年</string>
    <string name="rotext_ecgshow_Middle_age">中年</string>
    <string name="rotext_ecgshowYoung_old">中老年</string>
    <string name="rotext_echgshow_Old_age">老年</string>
    <string name="roterxt_ecgshow_string5">正在测心率，请停止后再退出</string>
    <string name="Add_Device">添加设备</string>
    <string name="other">其他</string>
    <string name="xindian">心电</string>
    <string name="Connected">已连接</string>
    <string name="disconnect">未连接</string>
    <string name="ecg_data">心电数据</string>
    <string name="Start_Time">记录时间：</string>
    <string name="Start_Date">记录日期：</string>
    <string name="file_size">文件大小：</string>
    <string name="playback">回放</string>
    <string name="playback1">回放</string>
    <string name="ble_connected">蓝牙设备已连接</string>
    <string name="rotext_main_string1">只有允许读写文件才能保存心电图数据</string>
    <string name="rotext_main_string2">位置访问权限被拒绝将无法保存心电图数据</string>
    <string name="rotext_main_string3">再按一次退出程序</string>
    <string name="rotext_main_string4">与蓝牙通信失败，请检查蓝牙设备是正常!</string>
    <string name="rotext_main_string5">蓝牙已连接</string>
    <string name="Temp">体温</string>
    <string name="BP">血压</string>
    <string name="Respire">呼吸</string>
    <string name="Unbound">未绑定</string>
    <string name="xindianty">心电图</string>
    <string name="languagetitle">选择语言</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancle">取消</string>
    <string name="Bluetooth_was_opened">蓝牙已打开</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>

    <string name="google_maps_title">Maps</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>


    <string name="now_connecting_ble_of_count">当前已连接蓝牙数量：</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="reset">重置</string>
    <string name="years">年</string>
    <string name="month">月</string>
    <string name="days">日</string>
    <string name="ble_number">设备数量：</string>
    <string name="select_date">选择日期</string>
    <string name="warning">警告</string>
    <string name="cancel_binding">是否解除绑定！</string>
    <string name="maxconnect">已达最大可连接数量！</string>
    <string name="Connect_successfully">连接成功</string>
    <string name="num">数量:</string>
    <string name="device_name">设备：</string>
    <string name="abnormal_device">异常设备</string>
    <string name="abnormal_device_num">共有%1$d个设备出现异常，分别是：\n</string>
    <string name="want_to_continue">\n是否继续连接?</string>
    <string name="check_string">正在检查蓝牙是否正常</string>
    <string name="no_used_device">当前没有可用设备！</string>
    <string name="add_device">添加设备</string>
    <string name="modify_ble_name">修改蓝牙别名</string>
    <string name="modify_name">设置别名</string>
    <string name="cancle">取消</string>
    <string name="save">保存</string>
    <string name="modify_success">修改成功</string>
    <string name="no_modify">没有修改</string>
    <string name="landscape">横屏</string>
    <string name="vertical">竖屏</string>
    <string name="breathe">呼吸</string>
    <string name="breathe_text">胸部的一次起伏就是一次呼吸，即一次吸气一次呼气。每分钟呼吸的次数称为呼吸频率</string>
    <string name="breathe_unit">次/分</string>
    <string name="breathe_normal1">初生儿：每分钟约30-50次</string>
    <string name="breathe_normal2">一岁  ：每分钟约20-30次</string>
    <string name="breathe_normal3">成人  ：每分钟约16-20次</string>
    <string name="breathe_normal4">老人  ：每分钟约14-16次</string>
    <string name="emg">肌电</string>
    <string name="input_name">请输入别名</string>
    <string name="low_ele">蓝牙设备电量过低，请充电</string>
    <string name="no_choose">没有选择任何设备</string>
    <string name="connected_faild">连接失败，请重新连接</string>
    <string name="ble_disconnected">蓝牙已经断开</string>
    <string name="ele_settiung">电压设置</string>
    <string name="low_vol">舒缓</string>
    <string name="mid_vol">适中</string>
    <string name="hig_vol">高强</string>
    <string name="max_choose">已超过当前最大可连接数(最多可连接4个设备)</string>
    <string name="no_ble_title">请检查蓝牙的状态，稍后再重新连接</string>
    <string name="no_ble_ok">确定</string>
    <string name="no_ble_cancle">取消</string>
    <string name="breath_rate">呼吸速率:</string>
    <string name="show_wave">显示波形</string>
    <string name="rest_wave">重置</string>
    <string name="stop_wave">停止</string>
    <string name="open_unity">演示</string>
    <string name="mag_calibration">校准</string>
</resources>
