<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_rotex_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/re_title"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:gravity="center|left"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="R:"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/text_r"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:layout_marginLeft="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="P:"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/text_p"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:layout_marginLeft="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="Y:"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/text_y"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="19sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/title_setting"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/settings_setting_128px" />
            <!--<ImageView-->
            <!--android:id="@+id/title_back"-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:src="@mipmap/battery0" />-->


        </RelativeLayout>
    </RelativeLayout>

    <com.rotex.rotexemg.views.ShowWaveView
        android:id="@+id/rotex_main_wave1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:BackLineColor="#ffffff"
        app:PointerLineColor="#d20266d9"
        app:TitleColor="#880272a3"
        app:TitleSize="15sp"
        app:layout_heightPercent="17%h" />

    <com.rotex.rotexemg.views.ShowWaveView
        android:id="@+id/rotex_main_wave2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:BackLineColor="#ffffff"
        app:PointerLineColor="#d20266d9"
        app:TitleColor="#880272a3"
        app:TitleSize="15sp"
        app:layout_heightPercent="18%h" />

    <com.rotex.rotexemg.views.ShowWaveView
        android:id="@+id/rotex_main_wave3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:BackLineColor="#ffffff"
        app:PointerLineColor="#d20266d9"
        app:TitleColor="#880272a3"
        app:TitleSize="15sp"
        app:layout_heightPercent="17%h" />

    <com.rotex.rotexemg.views.ShowWaveView
        android:id="@+id/rotex_main_wave4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:BackLineColor="#ffffff"
        app:PointerLineColor="#d20266d9"
        app:TitleColor="#880272a3"
        app:TitleSize="15sp"
        app:layout_heightPercent="17%h" />

    <com.rotex.rotexemg.views.ShowWaveView
        android:id="@+id/rotex_main_wave5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:BackLineColor="#ffffff"
        app:PointerLineColor="#d20266d9"
        app:TitleColor="#880272a3"
        app:TitleSize="15sp"
        app:layout_heightPercent="17%h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/emg_start_wave"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/selector_btn_study"
            android:gravity="center"
            android:text="@string/stop_wave"
            android:textSize="15sp" />

        <Button
            android:id="@+id/emg_reset"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_btn_study"
            android:gravity="center"
            android:text="@string/rest_wave"
            android:textSize="15sp" />


        <Button
            android:id="@+id/emg_open_untiy"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_btn_study"
            android:gravity="center"
            android:text="@string/open_unity"
            android:textSize="15sp" />

        <Button
            android:id="@+id/mag_calibration"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_btn_study"
            android:gravity="center"
            android:text="@string/mag_calibration"
            android:textSize="15sp" />
    </LinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>