<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_rotex_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/re_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/title_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="学习手势"
                android:textColor="@color/white"
                android:textSize="19sp" />


        </RelativeLayout>
    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="82%h">

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/li1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/wumignhzi"
                    android:textColor="@color/white"
                    android:textSize="19sp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/li1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/wumingzhishuoming"
                android:textColor="@color/text_gray"
                android:textSize="18sp" />


            <com.rotex.rotexemg.views.ProgressView
                android:id="@+id/pro_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                app:layout_heightPercent="80%w"
                app:layout_widthPercent="80%w" />

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/li2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_huan1"
                android:gravity="center"
                app:layout_heightPercent="70%w"
                app:layout_widthPercent="70%w">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="5dp"
                    android:src="@mipmap/action_wuminghzi_white"
                    app:layout_heightPercent="40%w"
                    app:layout_widthPercent="40%w" />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pro_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="学习无名指动作"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="第一次："
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_ok1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="第二次："
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_ok2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/no" />

            </LinearLayout>


        </com.zhy.android.percent.support.PercentRelativeLayout>

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/li3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/woquan"
                    android:textColor="@color/white"
                    android:textSize="19sp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/li3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/woquanshuoming"
                android:textColor="@color/text_gray"
                android:textSize="18sp" />


            <com.rotex.rotexemg.views.ProgressView
                android:id="@+id/pro_view1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                app:layout_heightPercent="80%w"
                app:layout_widthPercent="80%w" />

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/li4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_huan1"
                android:gravity="center"
                app:layout_heightPercent="70%w"
                app:layout_widthPercent="70%w">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="5dp"
                    android:src="@mipmap/action_wuminghzi_white"
                    app:layout_heightPercent="40%w"
                    app:layout_widthPercent="40%w" />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pro_view1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="学习握拳动作"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="第一次："
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_ok3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="第二次："
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_ok4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/no" />

            </LinearLayout>


        </com.zhy.android.percent.support.PercentRelativeLayout>

    </ViewFlipper>

    <LinearLayout
        android:id="@+id/emg_step_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/selector_btn_luzhi"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/reg" />

        <TextView
            android:id="@+id/emg_tv_btnsting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="开始学习"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>